# EchoLog

./: .gitignore  README.md  pyproject.toml
src/echolog/: __init__.py  logs.py
