[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = 'echolog'
version = '0.1.0'
description = 'Logging library'
readme = 'README.md'
requires-python = '>=3.9'

dependencies = [
    "colorama>=0.4.6",
    "pwinput>=1.0.3"
]

